--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -209,11 +209,17 @@ build-darwin-arm64:
     when: always
     expire_in: 4 hrs
 
+.nexus-stage:
+  after_script:
+    - './scripts/nexus_push.sh cp --recursive deploy :bridge:/export-tool/${CI_COMMIT_TAG}/'
+
 sign-and-pack-darwin:
   stage: installer
   needs: ["build-darwin-arm64"]
+  extends:
+    - .nexus-stage
   variables:
-    DARWIN_PACKGE: "$CI_PROJECT_DIR/et-darwin.zip"
+    DARWIN_PACKGE: "$CI_PROJECT_DIR/deploy/pmec_mac_universal.zip"
   script:
     - ./scripts/sign_and_pack_darwin.sh "${CMAKE_INSTALL_DARWIN_ARM_DIR}/bin" "${DARWIN_PACKGE}"
   artifacts:
@@ -221,5 +227,7 @@ sign-and-pack-darwin:
       - $DARWIN_PACKGE
     when: always
     expire_in: 4 hrs
+  rules:
+    - if: '$CI_COMMIT_TAG =~ /^et-\d+/'
   tags:
     - mac-prg-release-m1
