--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -13,6 +13,7 @@ variables:
   CMAKE_INSTALL_DIR_MACOS_X64: $CI_PROJECT_DIR/cmake-install-release-x86_64
   CMAKE_INSTALL_DIR_MACOS_UNIVERSAL: $CI_PROJECT_DIR/cmake-install-release-universal
   ARCHIVE_NAME_MACOS: macos_universal.zip
+  ARCHIVE_NAME_WINDOWS: windows_x86_64.zip
   CMAKE_BUILD_CONFIG: "Release"
   CMAKE_SENTRY_OPTION: -DSENTRY_DNS=$SENTRY_DNS
   ET_BIN_NAME: proton-mail-export-cli
@@ -227,7 +228,11 @@ build-darwin-universal:
 build-windows:
   stage: build
   variables:
-    ARCHIVE_NAME: windows_x86_64.zip
+    ARCHIVE_NAME: $ARCHIVE_NAME_WINDOWS
+      # Need to change the CMAKE_INSTALL_DIR because CI_PROJECT_NAME doesn't
+      # contain C:\ prefix. It is considered relative path by pwsh and packing
+      # job would need complex path to find artifacts.
+    CMAKE_INSTALL_DIR: ./cmake-install-release
   extends:
     - .env-windows
   script:
@@ -273,3 +278,38 @@ sign-and-pack-darwin:
     expire_in: 4 hrs
   tags:
     - mac-prg-release-m1
+
+sign-and-pack-windows:
+  stage: installer
+  needs: ["build-windows"]
+  extends:
+    - .rules-only-et-tag
+  variables:
+    FF_USE_FASTZIP: "true"
+    TRANSFER_METER_FREQUENCY: "2s"
+    ARTIFACT_COMPRESSION_LEVEL: "fastest"
+    CACHE_COMPRESSION_LEVEL: "fastest"
+    SIGN_DIR: "$CI_PROJECT_DIR/signdir"
+    ARCHIVE_PATH: "$CMAKE_INSTALL_DIR/bin/$ARCHIVE_NAME_WINDOWS"
+    PACKGE_PATH: "${DEPLOY_DIR}/${ET_BIN_NAME}-${ARCHIVE_NAME_WINDOWS}"
+  script:
+    - mkdir "$SIGN_DIR" && unzip "$ARCHIVE_PATH" -d "$SIGN_DIR"
+    - ./scripts/sign_and_pack_windows.sh "$SIGN_DIR" "${PACKGE_PATH}"
+  timeout: 3h
+  artifacts:
+    paths:
+      - $PACKGE_PATH
+    when: always
+    expire_in: 4 hrs
+  tags:
+    - windows-bridge-signing
+
+stage-windows:
+  stage: installer
+  needs: ["sign-and-pack-windows"]
+  variables:
+  extends:
+    - .rules-only-et-tag
+    - .nexus-stage
+  script:
+    - echo "Just upload artifact to nexus"
