feat(GODT-3037): Check for new version
Add a function to the global scope to enable the export tool to check
whether a new version is available.

--- a/cli/CMakeLists.txt
+++ b/cli/CMakeLists.txt
@@ -20,6 +20,8 @@ target_sources(proton-mail-export-cli PRIVATE
         bin/tasks/mail_task.cpp
         bin/tasks/mail_task.hpp
         bin/tasks/session_task.hpp
+        bin/tasks/global_task.cpp
+        bin/tasks/global_task.hpp
 )
 
 
