--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -164,6 +164,7 @@ build-linux:
     name: linux_x86_64
     paths:
       - $CMAKE_INSTALL_DIR/$ARCHIVE_NAME
+      - $CMAKE_INSTALL_DIR/meta/version.json
     when: always
     expire_in: 4 hrs
 
