--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,4 +1,4 @@
-image: gitlab.protontech.ch:4567/go/bridge-internal:test-go1.21
+image: gitlab.protontech.ch:4567/go/bridge-internal:test-go1.21-bullseye
 
 default:
   tags:
@@ -68,7 +68,7 @@ variables:
   variables:
     VCPKG_DEFAULT_BINARY_CACHE: ${CI_PROJECT_DIR}/.cache
   cache:
-    key: linux-vcpkg
+    key: linux-vcpkg-2
     paths:
       - .cache
     when: 'always'
