--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -12,7 +12,7 @@ variables:
   CMAKE_INSTALL_DIR_MACOS_ARM64: $CI_PROJECT_DIR/cmake-install-release-arm64
   CMAKE_INSTALL_DIR_MACOS_X64: $CI_PROJECT_DIR/cmake-install-release-x86_64
   CMAKE_INSTALL_DIR_MACOS_UNIVERSAL: $CI_PROJECT_DIR/cmake-install-release-universal
-  ARCHIVE_NAME_MACOS: macos_universal.zip
+  ARCHIVE_NAME_MACOS: macos.zip
   ARCHIVE_NAME_WINDOWS: windows_x86_64.zip
   ARCHIVE_NAME_LINUX: linux_x86_64.tar.gz
   CMAKE_BUILD_CONFIG: "Release"
