--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -139,7 +139,7 @@ stages:
     - !reference [.script-build, script]
     - ctest --build-config $CMAKE_BUILD_CONFIG --test-dir $CMAKE_BUILD_DIR -V
 
-.lint: # TODO remove before merge
+lint:
   tags:
     - shared-medium
   script:
@@ -149,7 +149,7 @@ stages:
     - cmake --build $CMAKE_BUILD_DIR --config $CMAKE_BUILD_CONFIG -t go-lib-lint
     - cmake --build $CMAKE_BUILD_DIR --config $CMAKE_BUILD_CONFIG -t clang-format-check
 
-.build-linux: # TODO remove before merge
+build-linux:
   stage: build
   variables:
     ARCHIVE_NAME: $ARCHIVE_NAME_LINUX
@@ -182,7 +182,7 @@ build-darwin-arm64:
     - !reference [.script-install, script]
   artifacts:
     paths:
-      - $CMAKE_INSTALL_DIR/bin
+      - $CMAKE_INSTALL_DIR
     when: always
     expire_in: 4 hrs
 
@@ -199,7 +199,7 @@ build-darwin-x86_64:
     - !reference [.script-install, script]
   artifacts:
     paths:
-      - $CMAKE_INSTALL_DIR/bin
+      - $CMAKE_INSTALL_DIR
     when: always
     expire_in: 4 hrs
 
@@ -211,21 +211,22 @@ build-darwin-universal:
   variables:
     CMAKE_INSTALL_DIR: $CMAKE_INSTALL_DIR_MACOS_UNIVERSAL
     ARCHIVE_NAME: $ARCHIVE_NAME_MACOS
+    APP_NAME: "${ET_BIN_NAME}.app"
   script:
-    - mkdir -p $CMAKE_INSTALL_DIR
-    - lipo -create -output $CMAKE_INSTALL_DIR/$ET_DLL_NAME.dylib $CMAKE_INSTALL_DIR_MACOS_ARM64/bin/$ET_DLL_NAME.dylib $CMAKE_INSTALL_DIR_MACOS_X64/bin/$ET_DLL_NAME.dylib
-    - lipo -create -output $CMAKE_INSTALL_DIR/$ET_BIN_NAME $CMAKE_INSTALL_DIR_MACOS_ARM64/bin/$ET_BIN_NAME $CMAKE_INSTALL_DIR_MACOS_X64/bin/$ET_BIN_NAME
-    - pushd $CMAKE_INSTALL_DIR
-    - zip $ARCHIVE_NAME $ET_DLL_NAME.dylib $ET_BIN_NAME
-    - popd
+    - ./scripts/create_app_darwin.sh
+      $CMAKE_INSTALL_DIR/${ARCHIVE_NAME}
+      $APP_NAME
+      $CMAKE_INSTALL_DIR_MACOS_ARM64/meta
+      $CMAKE_INSTALL_DIR_MACOS_ARM64/bin
+      $CMAKE_INSTALL_DIR_MACOS_X64/bin
   artifacts:
-    name: mac_universal
+    name: mac_app
     paths:
       - $CMAKE_INSTALL_DIR/$ARCHIVE_NAME
     when: always
     expire_in: 4 hrs
 
-.build-windows: # TODO remove before merge
+build-windows:
   stage: build
   variables:
     ARCHIVE_NAME: $ARCHIVE_NAME_WINDOWS
@@ -276,16 +277,17 @@ sign-and-pack-darwin:
   stage: installer
   needs: ["build-darwin-universal"]
   extends:
-    #- .rules-only-et-tag
+    - .rules-only-et-tag
     - .nexus-stage
     - .nexus-cache-darwin
   variables:
     SIGN_DIR: "$CI_PROJECT_DIR/signdir"
     ARCHIVE_PATH: "$CMAKE_INSTALL_DIR_MACOS_UNIVERSAL/$ARCHIVE_NAME_MACOS"
-    PACKGE_PATH: "${DEPLOY_DIR}/${ET_BIN_NAME}_${ARCHIVE_NAME_MACOS}"
+    PACKGE_PATH: "${DEPLOY_DIR}/${ET_BIN_NAME}-${ARCHIVE_NAME_MACOS}"
   script:
+    # Assuming archive contains single .app bundle
     - mkdir "$SIGN_DIR" && unzip "$ARCHIVE_PATH" -d "$SIGN_DIR"
-    - ./scripts/sign_and_pack_darwin.sh "$SIGN_DIR" "$PACKGE_PATH" "$ET_BIN_NAME" "${ET_BIN_NAME}.app"
+    - ./scripts/sign_and_pack_darwin.sh "$SIGN_DIR" "$PACKGE_PATH"
   artifacts:
     paths:
       - $PACKGE_PATH
@@ -294,7 +296,7 @@ sign-and-pack-darwin:
   tags:
     - mac-prg-release-m1
 
-.sign-and-pack-windows: # TODO remove before merge
+sign-and-pack-windows:
   stage: installer
   needs: ["build-windows"]
   extends:
@@ -322,7 +324,7 @@ sign-and-pack-darwin:
 # Need to sing split the job because windows signing machine is protected to
 # upload files only via artifacts. This (linux docker) job is created just to
 # upload signed files.
-.stage-windows: # TODO remove before merge
+stage-windows:
   stage: installer
   needs: ["sign-and-pack-windows"]
   extends:
@@ -332,7 +334,7 @@ sign-and-pack-darwin:
   script:
     - echo "Just upload artifact to nexus"
 
-.stage-linux: # TODO remove before merge
+stage-linux:
   stage: installer
   needs: ["build-linux"]
   extends:
