fix(GODT-3034): Update default folders for MacOS
Due to the change to the app bundle, the app will now write all the data
into `~/Downloads/proton-mail-export-cli` rather than location of the
executable.

--- a/cli/CMakeLists.txt
+++ b/cli/CMakeLists.txt
@@ -24,6 +24,15 @@ target_sources(proton-mail-export-cli PRIVATE
         bin/tasks/global_task.hpp
 )
 
+if (APPLE)
+    target_sources(proton-mail-export-cli PRIVATE
+        bin/macos.hpp
+        bin/macos.mm
+    )
+
+    target_link_libraries(proton-mail-export-cli PRIVATE "-framework Foundation")
+endif()
+
 
 apply_cpp_flags(proton-mail-export-cli)
 
