--- a/go-lib/CMakeLists.txt
+++ b/go-lib/CMakeLists.txt
@@ -105,7 +105,7 @@ build_cgo_lib(
     TARGET etcore
     NAME proton-mail-export
     GO_SOURCES ${go_files}
-    GO_EXPORTS export.go export_log.go export_mail.go export_globals.go
+    GO_EXPORTS export_session.go export_log.go export_backup.go export_globals.go
 )
 
 build_cgo_lib(
