ci(IMEX-1): reorganize ci files - no functionality.

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,349 +1,23 @@
-image: gitlab.protontech.ch:4567/go/bridge-internal:test-go1.21-bullseye
-
-default:
-  tags:
-    - shared-small
+---
 
 variables:
-  GOPRIVATE: gitlab.protontech.ch
-  GOMAXPROCS: $(( ${CI_TAG_CPU} / 2 ))
-  CMAKE_BUILD_DIR: $CI_PROJECT_DIR/cmake-build-release
-  CMAKE_INSTALL_DIR: $CI_PROJECT_DIR/cmake-install-release
-  CMAKE_INSTALL_DIR_MACOS_ARM64: $CI_PROJECT_DIR/cmake-install-release-arm64
-  CMAKE_INSTALL_DIR_MACOS_X64: $CI_PROJECT_DIR/cmake-install-release-x86_64
-  CMAKE_INSTALL_DIR_MACOS_UNIVERSAL: $CI_PROJECT_DIR/cmake-install-release-universal
-  ARCHIVE_NAME_MACOS: macos.zip
-  ARCHIVE_NAME_WINDOWS: windows_x86_64.zip
-  ARCHIVE_NAME_LINUX: linux_x86_64.tar.gz
-  CMAKE_BUILD_CONFIG: "Release"
-  CMAKE_SENTRY_OPTION: -DSENTRY_DNS=$SENTRY_DNS
-  ET_BIN_NAME: proton-mail-export-cli
-  ET_DLL_NAME: proton-mail-export
-  DEPLOY_DIR: $CI_PROJECT_DIR/deploy
-  # GIT_SUBMODULE_STRATEGY: recursive
-
-# ENV
-.env-windows:
-  variables:
-    VCPKG_DEFAULT_BINARY_CACHE: C:/${CI_PROJECT_DIR}/.cache
-    https_proxy: proxy.plabs.ch:3128
-    http_proxy: proxy.plabs.ch:3128
-    no_proxy: localhost,.plabs.ch,gitlab.protontech.ch,harbor.protontech.ch,127.0.0.1,127.0.0.0/8,172.16.0.0/12,10.0.0.0/8
-  before_script:
-    - New-Item -ItemType Directory -Path $VCPKG_DEFAULT_BINARY_CACHE -Force ;
-    - $Env:Path = "C:\\\\Program Files\\CMake\\bin;" + $Env:Path
-    - $(Get-Command cmake).Source
-    - cmake --version
-  cache:
-    key: win-vcpkg
-    paths:
-      - .cache
-    when: 'always'
-  image: windows-2022-export-tool
-  tags:
-    - bridge-vbox-windows
-
-.env-darwin:
-  variables:
-    VCPKG_DEFAULT_BINARY_CACHE: ${CI_PROJECT_DIR}/.cache
-  before_script:
-    - export PATH=/opt/homebrew/bin:$PATH
-    - export PATH=/opt/homebrew/opt/llvm/bin:$PATH
-    - export GOPATH=~/go
-    - export PATH="${GOPATH}/bin:$PATH"
-    - uname -a
-    - which ninja && ninja --version
-    - which cmake && cmake --version
-    - mkdir -p ${VCPKG_DEFAULT_BINARY_CACHE}
-  cache:
-    key: darwin-vcpkg
-    paths:
-      - .cache
-    when: 'always'
-  tags:
-    - bridge-tart
-  image: export-tool
-
-.env-linux-build:
-  variables:
-    VCPKG_DEFAULT_BINARY_CACHE: ${CI_PROJECT_DIR}/.cache
-  cache:
-    key: linux-vcpkg-2
-    paths:
-      - .cache
-    when: 'always'
-  before_script:
-    - mkdir -p .cache/bin
-    - export BRIDGE_SYNC_FORCE_MINIMUM_SPEC=1
-    - export PATH=$(pwd)/.cache/bin:$PATH
-    - export GOPATH="$CI_PROJECT_DIR/.cache"
-    - export PATH=$PATH:$QT6DIR/bin
-    - export LC_ALL=en-US
-  tags:
-    - shared-large
-
+  WORKFLOW:
+    value: default
+    description: "Control pipeline workflow"
+    options:
+      - default
+      - installers
 
 stages:
   - test
   - build
   - installer
 
-.script-config-git:
-  script:
-    - git config --global url.https://gitlab-ci-token:${CI_JOB_TOKEN}@${CI_SERVER_HOST}.insteadOf https://${CI_SERVER_HOST}
-    - git submodule update --init --recursive
-
-.script-config-cmake-win:
-  script:
-    - cmake
-       -S . -B "$CMAKE_BUILD_DIR"
-       -G "Visual Studio 17 2022"
-       -DCMAKE_GENERATOR_PLATFORM=x64
-       -DCMAKE_CL_64=1
-       -A "x64"
-       -DMINGW_CACHE_PATH="$VCPKG_DEFAULT_BINARY_CACHE"
-       -DVCPKG_HOST_TRIPLET=x64-windows-static
-       -DVCPKG_TARGET_TRIPLET=x64-windows-static
-       -DCMAKE_INSTALL_PREFIX="$CMAKE_INSTALL_DIR"
-       $CMAKE_SENTRY_OPTION
-
-.script-config-cmake-unix:
-  script:
-     - cmake -S . -B $CMAKE_BUILD_DIR -G "Ninja Multi-Config" -DCMAKE_INSTALL_PREFIX="$CMAKE_INSTALL_DIR" $CMAKE_SENTRY_OPTION
-
-.script-config-cmake-macos-arm64:
-  script:
-     - cmake -S . -B $CMAKE_BUILD_DIR -G "Ninja Multi-Config"
-        -DCMAKE_INSTALL_PREFIX="$CMAKE_INSTALL_DIR"
-        -DCMAKE_OSX_ARCHITECTURES=arm64
-        $CMAKE_SENTRY_OPTION
-
-.script-config-cmake-macos-x86_64:
-  script:
-     - cmake -S . -B $CMAKE_BUILD_DIR -G "Ninja Multi-Config"
-        -DCMAKE_INSTALL_PREFIX="$CMAKE_INSTALL_DIR"
-        -DCMAKE_OSX_ARCHITECTURES=x86_64
-        $CMAKE_SENTRY_OPTION
-
-.script-install:
-  script:
-     - cmake --install $CMAKE_BUILD_DIR --config $CMAKE_BUILD_CONFIG
-
-.script-build:
-  script:
-    - cmake --build $CMAKE_BUILD_DIR --config $CMAKE_BUILD_CONFIG
-
-.script-test:
-  extends:
-    - .script-build
-  script:
-    - !reference [.script-build, script]
-    - ctest --build-config $CMAKE_BUILD_CONFIG --test-dir $CMAKE_BUILD_DIR -V
-
-lint:
-  tags:
-    - shared-medium
-  script:
-    - !reference [.script-config-git, script]
-    - curl -sSfL https://raw.githubusercontent.com/golangci/golangci-lint/master/install.sh | sh -s -- -b $(go env GOPATH)/bin v1.57.2
-    - !reference [.script-config-cmake-unix, script]
-    - cmake --build $CMAKE_BUILD_DIR --config $CMAKE_BUILD_CONFIG -t go-lib-lint
-    - cmake --build $CMAKE_BUILD_DIR --config $CMAKE_BUILD_CONFIG -t clang-format-check
-
-build-linux:
-  stage: build
-  variables:
-    ARCHIVE_NAME: $ARCHIVE_NAME_LINUX
-  extends:
-    - .env-linux-build
-  script:
-    - !reference [.script-config-git, script]
-    - !reference [.script-config-cmake-unix, script]
-    - !reference [.script-test, script]
-    - !reference [.script-install, script]
-    - tar -czf $CMAKE_INSTALL_DIR/$ARCHIVE_NAME -C $CMAKE_INSTALL_DIR/bin $ET_BIN_NAME $ET_DLL_NAME.so
-  artifacts:
-    name: linux_x86_64
-    paths:
-      - $CMAKE_INSTALL_DIR/$ARCHIVE_NAME
-      - $CMAKE_INSTALL_DIR/meta/version.json
-    when: always
-    expire_in: 4 hrs
-
-build-darwin-arm64:
-  variables:
-    CMAKE_INSTALL_DIR: $CMAKE_INSTALL_DIR_MACOS_ARM64
-  stage: build
-  extends:
-    - .env-darwin
-  script:
-    - !reference [.script-config-git, script]
-    - !reference [.script-config-cmake-macos-arm64, script]
-    - !reference [.script-test, script]
-    - !reference [.script-install, script]
-  artifacts:
-    paths:
-      - $CMAKE_INSTALL_DIR
-    when: always
-    expire_in: 4 hrs
-
-build-darwin-x86_64:
-  variables:
-    CMAKE_INSTALL_DIR: $CMAKE_INSTALL_DIR_MACOS_X64
-  stage: build
-  extends:
-    - .env-darwin
-  script:
-    - !reference [.script-config-git, script]
-    - !reference [.script-config-cmake-macos-x86_64, script]
-    - !reference [.script-build, script]
-    - !reference [.script-install, script]
-  artifacts:
-    paths:
-      - $CMAKE_INSTALL_DIR
-    when: always
-    expire_in: 4 hrs
-
-build-darwin-universal:
-  stage: build
-  needs: ["build-darwin-x86_64", "build-darwin-arm64"]
-  extends:
-    - .env-darwin
-  variables:
-    CMAKE_INSTALL_DIR: $CMAKE_INSTALL_DIR_MACOS_UNIVERSAL
-    ARCHIVE_NAME: $ARCHIVE_NAME_MACOS
-    APP_NAME: "${ET_BIN_NAME}.app"
-  script:
-    - ./scripts/create_app_darwin.sh
-      $CMAKE_INSTALL_DIR/${ARCHIVE_NAME}
-      $APP_NAME
-      $CMAKE_INSTALL_DIR_MACOS_ARM64/meta
-      $CMAKE_INSTALL_DIR_MACOS_ARM64/bin
-      $CMAKE_INSTALL_DIR_MACOS_X64/bin
-  artifacts:
-    name: mac_app
-    paths:
-      - $CMAKE_INSTALL_DIR/$ARCHIVE_NAME
-    when: always
-    expire_in: 4 hrs
-
-build-windows:
-  stage: build
-  variables:
-    ARCHIVE_NAME: $ARCHIVE_NAME_WINDOWS
-      # Need to change the CMAKE_INSTALL_DIR because CI_PROJECT_NAME doesn't
-      # contain C:\ prefix. It is considered relative path by pwsh and packing
-      # job would need complex path to find artifacts.
-    CMAKE_INSTALL_DIR: ./cmake-install-release
-  extends:
-    - .env-windows
-  script:
-    - !reference [.script-config-git, script]
-    - !reference [.script-config-cmake-win, script]
-    - !reference [.script-test, script]
-    - !reference [.script-install, script]
-    - Push-Location "$CMAKE_INSTALL_DIR/bin"
-    - Compress-Archive -DestinationPath "$ARCHIVE_NAME" -Path "$ET_BIN_NAME.exe","$ET_DLL_NAME.dll"
-    - Pop-Location
-  artifacts:
-    name: windows_x86_64
-    paths:
-      - $CMAKE_INSTALL_DIR/bin/$ARCHIVE_NAME
-    when: always
-    expire_in: 4 hrs
-
-.rules-only-et-tag:
-  rules:
-    - if: '$CI_COMMIT_TAG =~ /^et-\d+/'
-
-.nexus-stage:
-  after_script:
-    - './scripts/nexus_push.sh cp --recursive $DEPLOY_DIR :bridge:/export-tool/${CI_COMMIT_TAG}/'
-
-.nexus-cache-darwin:
-  cache:
-    key: nexus-darwin
-    paths:
-      - nexus-client
-    when: 'always'
-
-.nexus-cache-linux:
-  cache:
-    key: nexus-linux
-    paths:
-      - nexus-client
-    when: 'always'
-
-sign-and-pack-darwin:
-  stage: installer
-  needs: ["build-darwin-universal"]
-  extends:
-    - .rules-only-et-tag
-    - .nexus-stage
-    - .nexus-cache-darwin
-  variables:
-    SIGN_DIR: "$CI_PROJECT_DIR/signdir"
-    ARCHIVE_PATH: "$CMAKE_INSTALL_DIR_MACOS_UNIVERSAL/$ARCHIVE_NAME_MACOS"
-    PACKGE_PATH: "${DEPLOY_DIR}/${ET_BIN_NAME}-${ARCHIVE_NAME_MACOS}"
-  script:
-    # Assuming archive contains single .app bundle
-    - mkdir "$SIGN_DIR" && unzip "$ARCHIVE_PATH" -d "$SIGN_DIR"
-    - ./scripts/sign_and_pack_darwin.sh "$SIGN_DIR" "$PACKGE_PATH"
-  artifacts:
-    paths:
-      - $PACKGE_PATH
-    when: always
-    expire_in: 4 hrs
-  tags:
-    - mac-prg-release-m1
-
-sign-and-pack-windows:
-  stage: installer
-  needs: ["build-windows"]
-  extends:
-    - .rules-only-et-tag
-  variables:
-    FF_USE_FASTZIP: "true"
-    TRANSFER_METER_FREQUENCY: "2s"
-    ARTIFACT_COMPRESSION_LEVEL: "fastest"
-    CACHE_COMPRESSION_LEVEL: "fastest"
-    SIGN_DIR: "$CI_PROJECT_DIR/signdir"
-    ARCHIVE_PATH: "$CMAKE_INSTALL_DIR/bin/$ARCHIVE_NAME_WINDOWS"
-    PACKGE_PATH: "${DEPLOY_DIR}/${ET_BIN_NAME}-${ARCHIVE_NAME_WINDOWS}"
-  script:
-    - mkdir "$SIGN_DIR" && unzip "$ARCHIVE_PATH" -d "$SIGN_DIR"
-    - ./scripts/sign_and_pack_windows.sh "$SIGN_DIR" "${PACKGE_PATH}"
-  timeout: 3h
-  artifacts:
-    paths:
-      - $PACKGE_PATH
-    when: always
-    expire_in: 4 hrs
-  tags:
-    - windows-bridge-signing
-
-# Need to sing split the job because windows signing machine is protected to
-# upload files only via artifacts. This (linux docker) job is created just to
-# upload signed files.
-stage-windows:
-  stage: installer
-  needs: ["sign-and-pack-windows"]
-  extends:
-    - .rules-only-et-tag
-    - .nexus-stage
-    - .nexus-cache-linux
-  script:
-    - echo "Just upload artifact to nexus"
-
-stage-linux:
-  stage: installer
-  needs: ["build-linux"]
-  extends:
-    - .rules-only-et-tag
-    - .nexus-stage
-    - .nexus-cache-linux
-  script:
-    - mkdir -p $DEPLOY_DIR
-    - cp $CMAKE_INSTALL_DIR/$ARCHIVE_NAME_LINUX $DEPLOY_DIR/${ET_BIN_NAME}-${ARCHIVE_NAME_LINUX}
-    - cp $CMAKE_INSTALL_DIR/meta/version.json $DEPLOY_DIR/version.json
-
+include:
+  - local: /ci/setup.yml
+  - local: /ci/test.yml
+  - local: /ci/build.yml
+  - local: /ci/installers.yml
+    rules:
+      - if: $WORKFLOW == "installers"
+      - if: $CI_COMMIT_TAG =~ /^et-\d+/
