feat(IMEX-10): cleanup and rename.

--- a/lib/CMakeLists.txt
+++ b/lib/CMakeLists.txt
@@ -10,14 +10,14 @@ add_library(etcpp STATIC include/etsession.hpp)
 
 target_sources(etcpp PRIVATE
     include/etsession.hpp
-    include/etexport_backup.hpp
-    include/etexport_restore.hpp
+    include/etbackup.hpp
+    include/etrestore.hpp
     include/etlog.hpp
     include/etutil.hpp
     include/et.hpp
     lib/etsession.cpp
-    lib/etexport_backup.cpp
-    lib/etexport_restore.cpp
+    lib/etbackup.cpp
+    lib/etrestore.cpp
     lib/etlog.cpp
     lib/etutil.cpp
     lib/et.cpp
