--- a/ci/setup.yml
+++ b/ci/setup.yml
@@ -85,6 +85,24 @@ variables:
   tags:
     - shared-large
 
+# NEXUS
+.nexus-stage:
+  after_script:
+    - './scripts/nexus_push.sh cp --recursive $DEPLOY_DIR :bridge:/export-tool/${CI_COMMIT_TAG}/'
+
+.nexus-cache-darwin:
+  cache:
+    key: nexus-darwin
+    paths:
+      - nexus-client
+    when: 'always'
+
+.nexus-cache-linux:
+  cache:
+    key: nexus-linux
+    paths:
+      - nexus-client
+    when: 'always'
 
 # SCRIPTS
 .script-config-git:
